# src/main/java/com/naukma/springproject/controller/StudentController.java
@@ -6,11 +6,10 @@ import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnBean;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.*;
-
-import javax.validation.Valid;
 
 @RestController
 @RequestMapping("/student")
@@ -25,10 +24,23 @@ public class StudentController {
         this.studentService = studentService;
     }
 
-    @PostMapping("/register")
-    @Operation(summary = "registering student operation")
-    public ResponseEntity registerStudent(@ModelAttribute("user") User student){
+    @PostMapping("/register-from-form")
+    @Operation(summary = "registering student operation via registering form")
+    public ResponseEntity registerStudentFromForm(@ModelAttribute("user") User student){
         try{
+            if(studentService.getUserByLogin(student.getLogin())!=null) return new ResponseEntity(HttpStatus.CONFLICT);
+            studentService.register(student);
+            return ResponseEntity.ok("Student created");
+        }catch (Exception e){
+            return ResponseEntity.badRequest().body("Error 404");
+        }
+    }
+
+    @PostMapping("/register")
+    @Operation(summary = "registering student with request body operation")
+    public ResponseEntity registerStudentByRequestBody(@RequestBody User student){
+        try{
+            if(studentService.getUserByLogin(student.getLogin())!=null) return new ResponseEntity(HttpStatus.CONFLICT);
             studentService.register(student);
             return ResponseEntity.ok("Student created");
         }catch (Exception e){
@@ -41,6 +53,16 @@ public class StudentController {
     public ResponseEntity getStudent(@PathVariable Long studentId) {
         try {
             return ResponseEntity.ok(studentService.get(studentId));
+        } catch(Exception e) {
+            return ResponseEntity.badRequest().body("Error 404");
+        }
+    }
+
+    @GetMapping("/get-by-login/{userLogin}")
+    @Operation(summary = "getting student by login operation")
+    public ResponseEntity getStudentByLogin(@PathVariable String userLogin) {
+        try {
+            return ResponseEntity.ok(studentService.getUserByLogin(userLogin));
         } catch(Exception e) {
             return ResponseEntity.badRequest().body("Error 404");
         }
